# metis

./: README.md  main.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: build app for win.yml
desktop/: README.md  main.js  package.json  preload.js  setup.py
docs/: DESKTOP_BUILD_GUIDE.md  USER_GUIDE.md
src/data_cleaning/: __init__.py  app.py  cleaner.py  cli.py  config.py  io.py
src/data_cleaning.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: __init__.py  test_app.py  test_cleaner.py  test_cli.py  test_config.py  test_io.py
web/: README.md  start.sh
web/backend/: app.py  config.py  data_cleaning.db  models.py  requirements.txt
web/frontend/: index.html  package-lock.json  package.json  vite.config.ts
web/frontend/src/: App.tsx
web/frontend/src/components/: Layout.tsx
web/frontend/src/components/ui/: slider.tsx  switch.tsx
web/frontend/src/lib/: api.ts  utils.ts
web/frontend/src/pages/: DataCleaningPage.tsx  DataTablesPage.tsx
